kubernetes/apps/observability/victoria/metrics/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: vmsingle
  name: victoria-metrics
spec:
  hostnames:
    - vam.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmsingle-kantai
          port: 8429
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: vmalertmanager
  name: victoria-alertmanager
spec:
  hostnames:
    - alm.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmalertmanager-kantai
          port: 9093
